--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,2 @@
 compile.on.save=true
-do.depend=false
-do.jar=true
-do.jlink=false
-javac.debug=true
-javadoc.preview=true
-jlink.strip=false
-user.properties.file=C:\\Users\\LENOVO\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
+user.properties.file=/Users/sarawahada/Library/Application Support/NetBeans/12.6/build.properties
