--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,11 +33,15 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/EFood
 excludes=
+file.reference.activation-1.1.1.jar=../../Downloads/activation-1.1.1.jar
+file.reference.javax.mail__1_.jar=../../Downloads/javax.mail (1).jar
 file.reference.mysql-connector-java-8.0.28.jar=../../Downloads/mysql-connector-java-8.0.28/mysql-connector-java-8.0.28.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.28.jar}
+    ${file.reference.mysql-connector-java-8.0.28.jar}:\
+    ${file.reference.javax.mail__1_.jar}:\
+    ${file.reference.activation-1.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
