--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -52,6 +52,7 @@ file.reference.javafx.web.jar=../../Downloads/javafx-sdk-17.0.2/lib/javafx.web.j
 file.reference.javax.mail__1_.jar=../../Downloads/javax.mail (1).jar
 file.reference.jfoenix-8.0.8.jar=../../Downloads/jfoenix-8.0.8.jar
 file.reference.mysql-connector-java-8.0.28.jar=../../Downloads/mysql-connector-java-8.0.28/mysql-connector-java-8.0.28.jar
+file.reference.velocity-engine-core-2.3-javadoc.jar=../../Downloads/velocity-engine-core-2.3-javadoc.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -70,7 +71,8 @@ javac.classpath=\
     ${file.reference.javafx.web.jar}:\
     ${file.reference.controlsfx-8.40.11.jar}:\
     ${file.reference.fontawesomefx-8.9.jar}:\
-    ${file.reference.jfoenix-8.0.8.jar}
+    ${file.reference.jfoenix-8.0.8.jar}:\
+    ${file.reference.velocity-engine-core-2.3-javadoc.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
