--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,23 +35,29 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/MyApp
 endorsed.classpath=
 excludes=
-file.reference.activation-1.1.1.jar=C:\\Users\\fomri\\Documents\\PiChahine\\activation-1.1.1.jar
-file.reference.controlsfx-8.40.11.jar=C:\\Users\\fomri\\Documents\\PiChahine\\controlsfx-8.40.11.jar
-file.reference.fontawesomefx-8.9.jar=C:\\Users\\fomri\\Documents\\PiChahine\\fontawesomefx-8.9.jar
-file.reference.jfoenix-8.0.8.jar=C:\\Users\\fomri\\Documents\\PiChahine\\jfoenix-8.0.8.jar
-file.reference.mail-1.4.7.jar=C:\\Users\\fomri\\Documents\\PiChahine\\mail-1.4.7.jar
+file.reference.AnimateFX-1.2.0.jar=C:\\Users\\fomri\\Documents\\Chahine\\Java-Git\\AnimateFX-1.2.0.jar
+file.reference.controlsfx-11.0.1.jar=C:\\Users\\fomri\\Documents\\Chahine\\Java-Git\\controlsfx-11.0.1.jar
+file.reference.controlsfx-samples-11.0.1.jar=C:\\Users\\fomri\\Documents\\Chahine\\Java-Git\\controlsfx-samples-11.0.1.jar
+file.reference.fontawesomefx-8.9.jar=C:\\Users\\fomri\\Documents\\Chahine\\Java-Git\\fontawesomefx-8.9.jar
+file.reference.fontawesomefx-commons-9.1.2.jar=C:\\Users\\fomri\\Documents\\Chahine\\Java-Git\\fontawesomefx-commons-9.1.2.jar
+file.reference.fontawesomefx-weathericons-2.0.10-9.1.2.jar=C:\\Users\\fomri\\Documents\\Chahine\\Java-Git\\fontawesomefx-weathericons-2.0.10-9.1.2.jar
+file.reference.jfoenix-9.0.10.jar=C:\\Users\\fomri\\Documents\\Chahine\\Java-Git\\jfoenix-9.0.10.jar
+file.reference.mail-1.4.7.jar=C:\\Users\\fomri\\Documents\\Chahine\\Java-Git\\mail-1.4.7.jar
 file.reference.mysql-connector-java-5.1.47-bin.jar=C:\\Users\\fomri\\Documents\\Chahine\\mysql-connector-java-5.1.47\\mysql-connector-java-5.1.47-bin.jar
 file.reference.mysql-connector-java-5.1.47.jar=C:\\Users\\fomri\\Documents\\Chahine\\mysql-connector-java-5.1.47\\mysql-connector-java-5.1.47.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.JavaFx_17.classpath}:\
     ${file.reference.mysql-connector-java-5.1.47-bin.jar}:\
+    ${libs.JavaFX16.classpath}:\
     ${file.reference.mysql-connector-java-5.1.47.jar}:\
-    ${file.reference.activation-1.1.1.jar}:\
-    ${file.reference.controlsfx-8.40.11.jar}:\
+    ${file.reference.AnimateFX-1.2.0.jar}:\
+    ${file.reference.controlsfx-11.0.1.jar}:\
+    ${file.reference.controlsfx-samples-11.0.1.jar}:\
     ${file.reference.fontawesomefx-8.9.jar}:\
-    ${file.reference.jfoenix-8.0.8.jar}:\
+    ${file.reference.fontawesomefx-commons-9.1.2.jar}:\
+    ${file.reference.fontawesomefx-weathericons-2.0.10-9.1.2.jar}:\
+    ${file.reference.jfoenix-9.0.10.jar}:\
     ${file.reference.mail-1.4.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -99,7 +105,7 @@ run.classpath=\
 run.jvmargs=--module-path "C:\\Users\\fomri\\Documents\\Chahine\\Final\\javafx-sdk-17.0.2\\lib" --add-modules javafx.controls,javafx.fxml
 run.modulepath=\
     ${javac.modulepath}:\
-    ${libs.JavaFx_17.classpath}
+    ${libs.JavaFX16.classpath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
